# clipper

./: Cargo.toml  README.md  add_desktop_link.sh  clipper.desktop
src/: idle.rs  main.rs  storage.rs
