[package]
name = "clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio"] }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
redb = "2"
fuzzy-matcher = "0.3"
x11rb = { version = "0.13", features = ["screensaver"] }
